--- a/style.css
+++ b/style.css
@@ -1,13 +1,16 @@
 .moves {
     display: flex;
     flex-direction: row;
-    background-color: rgb(149, 125, 173);
+    justify-content: space-around;
 }
 button {
-   background-color:rgb(224, 187, 228);
+    background-color: rgb(149, 125, 173);
    color: bisque;
 }
 #reset {
   background-color:rgb(149, 125, 173) ;
   color: bisque;
+}
+body{
+    background-color:rgb(224, 187, 228);
 }
