--- a/style.css
+++ b/style.css
@@ -1,15 +1,14 @@
 .moves {
     display: flex;
     flex-direction: row;
-   
-    justify-content: center;
+    justify-content: space-around;
 }
 button {
     background-color: rgb(149, 125, 173);
    color: bisque;
    size: 5rem;
    font-size: 1rem;
-   margin:4rem;
+   
 }
 #reset {
   background-color:rgb(149, 125, 173) ;
@@ -20,8 +19,9 @@ body{
     background-color:rgb(224, 187, 228);
 }
 .shifoumi {
+   background-color: rgb(224, 187, 228);
    display: flex ;
-  flex-direction: column;
+  flex-direction: center;
   padding: 6rem;
 }
 h1{
