--- a/style.css
+++ b/style.css
@@ -20,8 +20,9 @@ body{
 }
 .shifoumi {
    background-color: rgb(224, 187, 228);
-   display: flex ;
-  flex-direction: center;
+   display: flex;
+   align-items: row;
+   justify-content: center;
   padding: 6rem;
 }
 h1{
